# idea_creator_agent

./: .env.example  .gitignore  README.md  __init__.py  _verify_standalone.py  create_worker_poc.py  main.py  pyproject.toml  v2_analysis_demo.py  v2_dynamic_worker.py
agents/: __init__.py  factory.py  prompts.py  team.py
agents/definitions/: analyst.md  chief.md  ideator.md  searcher.md  synthesizer.md
config/: __init__.py  loader.py  models.py
config/presets/: idea_generation.yaml  quick_survey.yaml
orchestration/: __init__.py  autonomous.py  base.py  pipeline.py  router.py
tools/: __init__.py  arxiv.py  utils.py
