[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-creator"
version = "0.1.0"
description = "A harness-based multi-agent system for research paper search, analysis, and idea generation built on AgentScope."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Idea Creator Team"},
]
keywords = [
    "agentscope",
    "multi-agent",
    "research",
    "paper-search",
    "arxiv",
    "idea-generation",
    "literature-review",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "agentscope",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
idea-creator = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]
